优化反馈交互

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -256,5 +256,8 @@
   },
   "allptfm": {
     "message": "Alle KI-Plattformen"
+  },
+  "febhyejd": {
+    "message": "Feedback online einreichen"
   }
 }
