--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -256,5 +256,8 @@
   },
   "allptfm": {
     "message": "Todas las plataformas de IA"
+  },
+  "febhyejd": {
+    "message": "Enviar comentarios en línea"
   }
 }
