--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -256,5 +256,8 @@
   },
   "allptfm": {
     "message": "Toutes les plateformes IA"
+  },
+  "febhyejd": {
+    "message": "Soumettre un avis en ligne"
   }
 }
