--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -256,5 +256,8 @@
   },
   "allptfm": {
     "message": "सभी AI प्लेटफ़ॉर्म"
+  },
+  "febhyejd": {
+    "message": "ऑनलाइन फीडबैक सबमिट करें"
   }
 }
