--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -256,5 +256,8 @@
   },
   "allptfm": {
     "message": "Semua platform AI"
+  },
+  "febhyejd": {
+    "message": "Kirim umpan balik online"
   }
 }
