--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -256,6 +256,9 @@
   },
   "allptfm": {
     "message": "Tutte le piattaforme IA"
+  },
+  "febhyejd": {
+    "message": "Invia feedback online"
   }
 }
 
