--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -256,6 +256,9 @@
   },
   "allptfm": {
     "message": "Wszystkie platformy AI"
+  },
+  "febhyejd": {
+    "message": "Prześlij opinię online"
   }
 }
 
