--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -256,6 +256,9 @@
   },
   "allptfm": {
     "message": "Todas as plataformas de IA"
+  },
+  "febhyejd": {
+    "message": "Enviar feedback online"
   }
 }
 
