--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -256,6 +256,9 @@
   },
   "allptfm": {
     "message": "Все ИИ-платформы"
+  },
+  "febhyejd": {
+    "message": "Отправить отзыв онлайн"
   }
 }
 
