--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -256,6 +256,9 @@
   },
   "allptfm": {
     "message": "Tất cả nền tảng AI"
+  },
+  "febhyejd": {
+    "message": "Gửi phản hồi trực tuyến"
   }
 }
 
