--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -259,6 +259,15 @@
   },
   "febhyejd": {
     "message": "Enviar feedback online"
+  },
+  "runnerTabName": {
+    "message": "Executor de código"
+  },
+  "runnerSettingsTitle": {
+    "message": "Linguagens suportadas"
+  },
+  "runnerSettingsHint": {
+    "message": "Quando ativado, um botão Run aparecerá nos blocos de código para executar código diretamente"
   }
 }
 
