--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "Quando attivato, apparirà un pulsante Run sui blocchi di codice per eseguire il codice direttamente"
+  },
+  "fiveStarReview": {
+    "message": "Ti piace?"
+  },
+  "goToReview": {
+    "message": "Dacci 5 stelle"
   }
 }
 
