--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "Po włączeniu na blokach kodu pojawi się przycisk Run do bezpośredniego uruchamiania kodu"
+  },
+  "fiveStarReview": {
+    "message": "Podoba Ci się?"
+  },
+  "goToReview": {
+    "message": "Oceń nas na 5 gwiazdek"
   }
 }
 
