--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "Quando ativado, um botão Run aparecerá nos blocos de código para executar código diretamente"
+  },
+  "fiveStarReview": {
+    "message": "Gostou?"
+  },
+  "goToReview": {
+    "message": "Avalie-nos com 5 estrelas"
   }
 }
 
