--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "При включении на блоках кода появится кнопка Run для прямого выполнения кода"
+  },
+  "fiveStarReview": {
+    "message": "Нравится?"
+  },
+  "goToReview": {
+    "message": "Поставьте нам 5 звёзд"
   }
 }
 
