--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "เมื่อเปิดใช้งาน ปุ่ม Run จะปรากฏบนบล็อกโค้ดเพื่อรันโค้ดโดยตรง"
+  },
+  "fiveStarReview": {
+    "message": "ชอบไหม?"
+  },
+  "goToReview": {
+    "message": "ให้เรา 5 ดาว"
   }
 }
 
