--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "Khi bật, nút Run sẽ xuất hiện trên các khối mã để chạy mã trực tiếp"
+  },
+  "fiveStarReview": {
+    "message": "Thích không?"
+  },
+  "goToReview": {
+    "message": "Đánh giá 5 sao cho chúng tôi"
   }
 }
 
