--- a/_locales/zh_HK/messages.json
+++ b/_locales/zh_HK/messages.json
@@ -268,6 +268,12 @@
   },
   "runnerSettingsHint": {
     "message": "開啟後，代碼塊右上角將顯示 Run 按鈕，點擊可直接運行代碼"
+  },
+  "fiveStarReview": {
+    "message": "覺得好用？"
+  },
+  "goToReview": {
+    "message": "俾我哋五星好評"
   }
 }
 
