--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: सबसे शक्तिशाली AI दक्षता सहायक - ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline: ऑल-प्लेटफॉर्म AI सहायक"
   },
   "extDescription": {
-    "message": "LaTeX फ़ॉर्मूला कॉपी करें, इंटरैक्टिव वार्तालाप टाइमलाइन, Enter से नई लाइन, प्रॉम्प्ट लाइब्रेरी। अपनी AI दक्षता दोगुनी करें।"
+    "message": "GPT, Gemini, DeepSeek और सभी AI प्लेटफ़ॉर्म के लिए AI दक्षता सहायक: इंटरैक्टिव वार्तालाप टाइमलाइन, LaTeX फ़ॉर्मूला कॉपी, कस्टम प्रॉम्प्ट लाइब्रेरी, कोड ब्लॉक चलाएं और AI दक्षता दोगुनी करने के लिए कई और सुविधाएं।"
   },
   "qwxpzm": {
     "message": "पसंदीदा"
@@ -270,9 +270,12 @@
     "message": "सक्षम होने पर, कोड ब्लॉक पर एक Run बटन दिखाई देगा जिससे कोड को सीधे चलाया जा सकता है"
   },
   "fiveStarReview": {
-    "message": "पसंद आया?"
+    "message": "पसंद आया"
   },
   "goToReview": {
     "message": "हमें 5 स्टार दें"
+  },
+  "urlButtonHint": {
+    "message": "सादे टेक्स्ट URL को क्लिक करने योग्य लिंक में बदलें जो नए टैब में खुलते हैं"
   }
 }
