--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: O assistente de eficiência de IA mais poderoso para ChatGPT"
+    "message": "AI Timeline: Assistente AI multiplataforma"
   },
   "extDescription": {
-    "message": "Copiar fórmulas LaTeX, cronologia de conversação interativa, nova linha com Enter, biblioteca de prompts. Duplique a sua eficiência com IA."
+    "message": "Assistente de eficiência IA para GPT, Gemini, DeepSeek e todas as plataformas IA: cronologia de conversação interativa, copiar fórmulas LaTeX, biblioteca de prompts personalizada, executar blocos de código e muitas mais funcionalidades para duplicar a sua eficiência com IA."
   },
   "qwxpzm": {
     "message": "Favorito"
@@ -270,10 +270,13 @@
     "message": "Quando ativado, um botão Run aparecerá nos blocos de código para executar código diretamente"
   },
   "fiveStarReview": {
-    "message": "Gostou?"
+    "message": "Gostou"
   },
   "goToReview": {
     "message": "Avalie-nos com 5 estrelas"
+  },
+  "urlButtonHint": {
+    "message": "Converter URLs de texto simples em links clicáveis que abrem numa nova aba"
   }
 }
 
