--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: Самый мощный ИИ-помощник для ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline: Мультиплатформенный ИИ-ассистент"
   },
   "extDescription": {
-    "message": "Копирование формул LaTeX, интерактивная шкала времени диалога, перенос строки по Enter, библиотека промптов. Удвойте эффективность работы с ИИ."
+    "message": "ИИ-ассистент эффективности для GPT, Gemini, DeepSeek и всех ИИ-платформ: интерактивная шкала времени диалога, копирование формул LaTeX, настраиваемая библиотека промптов, выполнение блоков кода и множество других функций для удвоения эффективности работы с ИИ."
   },
   "qwxpzm": {
     "message": "Избранное"
@@ -270,10 +270,13 @@
     "message": "При включении на блоках кода появится кнопка Run для прямого выполнения кода"
   },
   "fiveStarReview": {
-    "message": "Нравится?"
+    "message": "Нравится"
   },
   "goToReview": {
     "message": "Поставьте нам 5 звёзд"
+  },
+  "urlButtonHint": {
+    "message": "Преобразовать текстовые URL в кликабельные ссылки, открывающиеся в новой вкладке"
   }
 }
 
