--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: ผู้ช่วยประสิทธิภาพ AI ที่ทรงพลังที่สุดสำหรับ ChatGPT, Gemini"
+    "message": "AI Timeline: ผู้ช่วย AI ทุกแพลตฟอร์ม"
   },
   "extDescription": {
-    "message": "คัดลอกสูตร LaTeX, ไทม์ไลน์การสนทนาแบบโต้ตอบ, ขึ้นบรรทัดใหม่ด้วย Enter, คลัง Prompt เพิ่มประสิทธิภาพ AI ของคุณเป็นสองเท่า"
+    "message": "ผู้ช่วยเพิ่มประสิทธิภาพ AI สำหรับ GPT, Gemini, DeepSeek และทุกแพลตฟอร์ม AI: ไทม์ไลน์การสนทนาแบบโต้ตอบ, คัดลอกสูตร LaTeX, คลัง Prompt ที่กำหนดเอง, รันโค้ดบล็อก และฟีเจอร์อื่นๆ อีกมากมายเพื่อเพิ่มประสิทธิภาพ AI เป็นสองเท่า"
   },
   "qwxpzm": {
     "message": "รายการโปรด"
@@ -270,10 +270,13 @@
     "message": "เมื่อเปิดใช้งาน ปุ่ม Run จะปรากฏบนบล็อกโค้ดเพื่อรันโค้ดโดยตรง"
   },
   "fiveStarReview": {
-    "message": "ชอบไหม?"
+    "message": "ชอบไหม"
   },
   "goToReview": {
     "message": "ให้เรา 5 ดาว"
+  },
+  "urlButtonHint": {
+    "message": "แปลง URL ข้อความธรรมดาเป็นลิงก์ที่คลิกได้ เปิดในแท็บใหม่"
   }
 }
 
