--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline : L'assistant d'efficacité IA le plus puissant pour ChatGPT"
+    "message": "AI Timeline : Assistant AI multiplateforme"
   },
   "extDescription": {
-    "message": "Copier les formules LaTeX, chronologie de conversation interactive, retour à la ligne avec Entrée, bibliothèque de prompts. Doublez votre efficacité avec l'IA."
+    "message": "Assistant d'efficacité IA pour GPT, Gemini, DeepSeek et toutes les plateformes IA : chronologie de conversation interactive, copie de formules LaTeX, bibliothèque de prompts personnalisée, exécution de blocs de code, et bien plus pour doubler votre efficacité IA."
   },
   "qwxpzm": {
     "message": "Favori"
@@ -270,9 +270,12 @@
     "message": "Lorsqu'activé, un bouton Run apparaîtra sur les blocs de code pour exécuter le code directement"
   },
   "fiveStarReview": {
-    "message": "Vous aimez ?"
+    "message": "Vous aimez"
   },
   "goToReview": {
     "message": "Donnez-nous 5 étoiles"
+  },
+  "urlButtonHint": {
+    "message": "Convertir les URL en texte brut en liens cliquables qui s'ouvrent dans un nouvel onglet"
   }
 }
