--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Timeline: 최강의 AI 효율 어시스턴트 - ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline: 전 플랫폼 AI 효율 어시스턴트"
   },
   "extDescription": {
-    "message": "LaTeX 수식 복사, 대화 타임라인, Enter키 줄바꿈, 프롬프트 라이브러리 지원. AI 사용 효율을 두 배로!"
+    "message": "AI 효율 어시스턴트, GPT·Gemini·DeepSeek 등 모든 AI 플랫폼 지원: 인터랙티브 대화 타임라인, LaTeX 수식 복사, 커스텀 프롬프트 라이브러리, 코드 블록 실행 등 다양한 기능으로 AI 사용 효율 두 배로!"
   },
   "qwxpzm": {
     "message": "즐겨찾기"
@@ -270,9 +270,12 @@
     "message": "활성화하면 코드 블록에 Run 버튼이 표시되어 코드를 직접 실행할 수 있습니다"
   },
   "fiveStarReview": {
-    "message": "마음에 드시나요?"
+    "message": "마음에 드시나요"
   },
   "goToReview": {
     "message": "별점 5점 부탁드려요"
+  },
+  "urlButtonHint": {
+    "message": "일반 텍스트 URL을 클릭 가능한 링크로 변환하여 새 탭에서 열기"
   }
 }
