--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline：全平台 AI 效率助手"
   },
   "extDescription": {
-    "message": "AI 效率助手，支持 GPT、Gemini、DeepSeek 等所有 AI 平台：可交互对话时间轴、复制 LaTex 公式、自定义提示词库、运行代码块等超多功能，助你使用 AI 效率翻倍。"
+    "message": "AI 效率助手，支持 GPT、Gemini、DeepSeek 等所有 AI 平台：可交互对话时间轴、复制 LaTeX 公式、自定义提示词库、运行代码块等超多功能，助你使用 AI 效率翻倍。"
   },
   "qwxpzm": {
     "message": "收藏"
