--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline: All-Platform AI Efficiency Assistant"
   },
   "extDescription": {
-    "message": "AI efficiency assistant for GPT, Gemini, DeepSeek & all AI platforms: interactive conversation timeline, copy LaTeX formulas, custom prompt library, run code blocks, and more features to double your AI efficiency."
+    "message": "AI efficiency tools for GPT, Gemini, DeepSeek & more: conversation timeline, LaTeX copy, prompt library, code runner."
   },
   "qwxpzm": {
     "message": "Star"
