侧边栏展示收藏列表

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Keine Daten"
   },
+  "zxvkpm": {
+    "message": "Alle anzeigen"
+  },
+  "qdyqxsc": {
+    "message": "Möchten Sie das Lesezeichen entfernen?"
+  },
   "mvkxpz": {
     "message": "Kopieren"
   },
