--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -307,5 +307,11 @@
   },
   "watermarkTabName": {
     "message": "Watermark"
+  },
+  "zxvkpm": {
+    "message": "View All"
+  },
+  "qdyqxsc": {
+    "message": "Are you sure you want to unstar?"
   }
 }
