--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "No Data"
   },
+  "zxvkpm": {
+    "message": "View All"
+  },
+  "qdyqxsc": {
+    "message": "Are you sure you want to unstar?"
+  },
   "mvkxpz": {
     "message": "Copy"
   },
