--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Sin datos"
   },
+  "zxvkpm": {
+    "message": "Ver todo"
+  },
+  "qdyqxsc": {
+    "message": "¿Quieres quitar de favoritos?"
+  },
   "mvkxpz": {
     "message": "Copiar"
   },
