--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Aucune donnée"
   },
+  "zxvkpm": {
+    "message": "Voir tout"
+  },
+  "qdyqxsc": {
+    "message": "Voulez-vous retirer des favoris ?"
+  },
   "mvkxpz": {
     "message": "Copier"
   },
