--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "कोई डेटा नहीं"
   },
+  "zxvkpm": {
+    "message": "सभी देखें"
+  },
+  "qdyqxsc": {
+    "message": "क्या आप पसंदीदा से हटाना चाहते हैं?"
+  },
   "mvkxpz": {
     "message": "कॉपी करें"
   },
