--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Tidak ada data"
   },
+  "zxvkpm": {
+    "message": "Lihat semua"
+  },
+  "qdyqxsc": {
+    "message": "Hapus dari favorit?"
+  },
   "mvkxpz": {
     "message": "Salin"
   },
