--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Nessun dato"
   },
+  "zxvkpm": {
+    "message": "Vedi tutto"
+  },
+  "qdyqxsc": {
+    "message": "Vuoi rimuovere dai preferiti?"
+  },
   "mvkxpz": {
     "message": "Copia"
   },
