--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "データがありません"
   },
+  "zxvkpm": {
+    "message": "すべて表示"
+  },
+  "qdyqxsc": {
+    "message": "お気に入りを解除しますか？"
+  },
   "mvkxpz": {
     "message": "コピー"
   },
