--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "데이터 없음"
   },
+  "zxvkpm": {
+    "message": "모두 보기"
+  },
+  "qdyqxsc": {
+    "message": "즐겨찾기를 취소하시겠습니까?"
+  },
   "mvkxpz": {
     "message": "복사"
   },
