--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Brak danych"
   },
+  "zxvkpm": {
+    "message": "Pokaż wszystko"
+  },
+  "qdyqxsc": {
+    "message": "Usunąć z ulubionych?"
+  },
   "mvkxpz": {
     "message": "Kopiuj"
   },
