--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Sem dados"
   },
+  "zxvkpm": {
+    "message": "Ver tudo"
+  },
+  "qdyqxsc": {
+    "message": "Quer remover dos favoritos?"
+  },
   "mvkxpz": {
     "message": "Copiar"
   },
