--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Нет данных"
   },
+  "zxvkpm": {
+    "message": "Показать все"
+  },
+  "qdyqxsc": {
+    "message": "Удалить из избранного?"
+  },
   "mvkxpz": {
     "message": "Копировать"
   },
