--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "ไม่มีข้อมูล"
   },
+  "zxvkpm": {
+    "message": "ดูทั้งหมด"
+  },
+  "qdyqxsc": {
+    "message": "ต้องการลบออกจากรายการโปรด?"
+  },
   "mvkxpz": {
     "message": "คัดลอก"
   },
