--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "Không có dữ liệu"
   },
+  "zxvkpm": {
+    "message": "Xem tất cả"
+  },
+  "qdyqxsc": {
+    "message": "Bạn có muốn bỏ yêu thích không?"
+  },
   "mvkxpz": {
     "message": "Sao chép"
   },
