--- a/_locales/zh_HK/messages.json
+++ b/_locales/zh_HK/messages.json
@@ -29,6 +29,12 @@
   "jwvnkp": {
     "message": "暫無數據"
   },
+  "zxvkpm": {
+    "message": "查看全部"
+  },
+  "qdyqxsc": {
+    "message": "確定要取消收藏嗎？"
+  },
   "mvkxpz": {
     "message": "複製"
   },
