优化公式复制、收展时间轴

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -295,5 +295,8 @@
   },
   "watermarkTabName": {
     "message": "Wasserzeichen"
+  },
+  "formulaFormatTitle": {
+    "message": "Kopierformat auswählen"
   }
 }
