--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -313,5 +313,8 @@
   },
   "qdyqxsc": {
     "message": "Are you sure you want to unstar?"
+  },
+  "formulaFormatTitle": {
+    "message": "Select Copy Format"
   }
 }
