--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -295,5 +295,8 @@
   },
   "watermarkTabName": {
     "message": "Watermark"
+  },
+  "formulaFormatTitle": {
+    "message": "Select Copy Format"
   }
 }
