--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -295,5 +295,8 @@
   },
   "watermarkTabName": {
     "message": "Filigrane"
+  },
+  "formulaFormatTitle": {
+    "message": "Sélectionner le format de copie"
   }
 }
