--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -295,5 +295,8 @@
   },
   "watermarkTabName": {
     "message": "वॉटरमार्क"
+  },
+  "formulaFormatTitle": {
+    "message": "कॉपी प्रारूप चुनें"
   }
 }
