--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -295,6 +295,9 @@
   },
   "watermarkTabName": {
     "message": "Marca d'água"
+  },
+  "formulaFormatTitle": {
+    "message": "Selecionar formato de cópia"
   }
 }
 
