--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -295,6 +295,9 @@
   },
   "watermarkTabName": {
     "message": "Водяной знак"
+  },
+  "formulaFormatTitle": {
+    "message": "Выберите формат копирования"
   }
 }
 
