--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -295,6 +295,9 @@
   },
   "watermarkTabName": {
     "message": "ลายน้ำ"
+  },
+  "formulaFormatTitle": {
+    "message": "เลือกรูปแบบการคัดลอก"
   }
 }
 
